// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Test 1`] = `
{
  "album": {
    "album_type": "single",
    "artists": [
      {
        "external_urls": {
          "spotify": "https://open.spotify.com/artist/0HxX6imltnNXJyQhu4nsiO",
        },
        "href": "https://api.spotify.com/v1/artists/0HxX6imltnNXJyQhu4nsiO",
        "id": "0HxX6imltnNXJyQhu4nsiO",
        "name": "LF SYSTEM",
        "type": "artist",
        "uri": "spotify:artist:0HxX6imltnNXJyQhu4nsiO",
      },
    ],
    "available_markets": [
      "AD",
      "AE",
      "AG",
      "AL",
      "AM",
      "AO",
      "AR",
      "AT",
      "AU",
      "AZ",
      "BA",
      "BB",
      "BD",
      "BE",
      "BF",
      "BG",
      "BH",
      "BI",
      "BJ",
      "BN",
      "BO",
      "BR",
      "BS",
      "BT",
      "BW",
      "BZ",
      "CA",
      "CD",
      "CG",
      "CH",
      "CI",
      "CL",
      "CM",
      "CO",
      "CR",
      "CV",
      "CW",
      "CY",
      "CZ",
      "DE",
      "DJ",
      "DK",
      "DM",
      "DO",
      "DZ",
      "EC",
      "EE",
      "EG",
      "ES",
      "FI",
      "FJ",
      "FM",
      "FR",
      "GA",
      "GB",
      "GD",
      "GE",
      "GH",
      "GM",
      "GN",
      "GQ",
      "GR",
      "GT",
      "GW",
      "GY",
      "HK",
      "HN",
      "HR",
      "HT",
      "HU",
      "ID",
      "IE",
      "IL",
      "IN",
      "IQ",
      "IS",
      "IT",
      "JM",
      "JO",
      "JP",
      "KE",
      "KG",
      "KH",
      "KI",
      "KM",
      "KN",
      "KR",
      "KW",
      "KZ",
      "LA",
      "LB",
      "LC",
      "LI",
      "LK",
      "LR",
      "LS",
      "LT",
      "LU",
      "LV",
      "LY",
      "MA",
      "MC",
      "MD",
      "ME",
      "MG",
      "MH",
      "MK",
      "ML",
      "MN",
      "MO",
      "MR",
      "MT",
      "MU",
      "MV",
      "MW",
      "MX",
      "MY",
      "MZ",
      "NA",
      "NE",
      "NG",
      "NI",
      "NL",
      "NO",
      "NP",
      "NR",
      "NZ",
      "OM",
      "PA",
      "PE",
      "PG",
      "PH",
      "PK",
      "PL",
      "PS",
      "PT",
      "PW",
      "PY",
      "QA",
      "RO",
      "RS",
      "RW",
      "SA",
      "SB",
      "SC",
      "SE",
      "SG",
      "SI",
      "SK",
      "SL",
      "SM",
      "SN",
      "SR",
      "ST",
      "SV",
      "SZ",
      "TD",
      "TG",
      "TH",
      "TJ",
      "TL",
      "TN",
      "TO",
      "TR",
      "TT",
      "TV",
      "TW",
      "TZ",
      "UA",
      "UG",
      "US",
      "UY",
      "UZ",
      "VC",
      "VE",
      "VN",
      "VU",
      "WS",
      "XK",
      "ZA",
      "ZM",
      "ZW",
    ],
    "external_urls": {
      "spotify": "https://open.spotify.com/album/528LrHfHcB7PMAvyp8Obhp",
    },
    "href": "https://api.spotify.com/v1/albums/528LrHfHcB7PMAvyp8Obhp",
    "id": "528LrHfHcB7PMAvyp8Obhp",
    "images": [
      {
        "height": 640,
        "url": "https://i.scdn.co/image/ab67616d0000b273ced808ef1567eaf901041438",
        "width": 640,
      },
      {
        "height": 300,
        "url": "https://i.scdn.co/image/ab67616d00001e02ced808ef1567eaf901041438",
        "width": 300,
      },
      {
        "height": 64,
        "url": "https://i.scdn.co/image/ab67616d00004851ced808ef1567eaf901041438",
        "width": 64,
      },
    ],
    "name": "Afraid To Feel",
    "release_date": "2022-05-02",
    "release_date_precision": "day",
    "total_tracks": 1,
    "type": "album",
    "uri": "spotify:album:528LrHfHcB7PMAvyp8Obhp",
  },
  "artists": [
    {
      "external_urls": {
        "spotify": "https://open.spotify.com/artist/0HxX6imltnNXJyQhu4nsiO",
      },
      "href": "https://api.spotify.com/v1/artists/0HxX6imltnNXJyQhu4nsiO",
      "id": "0HxX6imltnNXJyQhu4nsiO",
      "name": "LF SYSTEM",
      "type": "artist",
      "uri": "spotify:artist:0HxX6imltnNXJyQhu4nsiO",
    },
  ],
  "available_markets": [
    "AD",
    "AE",
    "AG",
    "AL",
    "AM",
    "AO",
    "AR",
    "AT",
    "AU",
    "AZ",
    "BA",
    "BB",
    "BD",
    "BE",
    "BF",
    "BG",
    "BH",
    "BI",
    "BJ",
    "BN",
    "BO",
    "BR",
    "BS",
    "BT",
    "BW",
    "BZ",
    "CA",
    "CD",
    "CG",
    "CH",
    "CI",
    "CL",
    "CM",
    "CO",
    "CR",
    "CV",
    "CW",
    "CY",
    "CZ",
    "DE",
    "DJ",
    "DK",
    "DM",
    "DO",
    "DZ",
    "EC",
    "EE",
    "EG",
    "ES",
    "FI",
    "FJ",
    "FM",
    "FR",
    "GA",
    "GB",
    "GD",
    "GE",
    "GH",
    "GM",
    "GN",
    "GQ",
    "GR",
    "GT",
    "GW",
    "GY",
    "HK",
    "HN",
    "HR",
    "HT",
    "HU",
    "ID",
    "IE",
    "IL",
    "IN",
    "IQ",
    "IS",
    "IT",
    "JM",
    "JO",
    "JP",
    "KE",
    "KG",
    "KH",
    "KI",
    "KM",
    "KN",
    "KR",
    "KW",
    "KZ",
    "LA",
    "LB",
    "LC",
    "LI",
    "LK",
    "LR",
    "LS",
    "LT",
    "LU",
    "LV",
    "LY",
    "MA",
    "MC",
    "MD",
    "ME",
    "MG",
    "MH",
    "MK",
    "ML",
    "MN",
    "MO",
    "MR",
    "MT",
    "MU",
    "MV",
    "MW",
    "MX",
    "MY",
    "MZ",
    "NA",
    "NE",
    "NG",
    "NI",
    "NL",
    "NO",
    "NP",
    "NR",
    "NZ",
    "OM",
    "PA",
    "PE",
    "PG",
    "PH",
    "PK",
    "PL",
    "PS",
    "PT",
    "PW",
    "PY",
    "QA",
    "RO",
    "RS",
    "RW",
    "SA",
    "SB",
    "SC",
    "SE",
    "SG",
    "SI",
    "SK",
    "SL",
    "SM",
    "SN",
    "SR",
    "ST",
    "SV",
    "SZ",
    "TD",
    "TG",
    "TH",
    "TJ",
    "TL",
    "TN",
    "TO",
    "TR",
    "TT",
    "TV",
    "TW",
    "TZ",
    "UA",
    "UG",
    "US",
    "UY",
    "UZ",
    "VC",
    "VE",
    "VN",
    "VU",
    "WS",
    "XK",
    "ZA",
    "ZM",
    "ZW",
  ],
  "disc_number": 1,
  "duration_ms": 177524,
  "explicit": false,
  "external_ids": {
    "isrc": "GBAHT2200492",
  },
  "external_urls": {
    "spotify": "https://open.spotify.com/track/40SBS57su9xLiE1WqkXOVr",
  },
  "href": "https://api.spotify.com/v1/tracks/40SBS57su9xLiE1WqkXOVr",
  "id": "40SBS57su9xLiE1WqkXOVr",
  "is_local": false,
  "name": "Afraid To Feel",
  "popularity": 85,
  "preview_url": "https://p.scdn.co/mp3-preview/127d8691ff65a9c521813cbfb973ac5302b7840f?cid=3041f34cf22c46349d0c80148946aee6",
  "track_number": 1,
  "type": "track",
  "uri": "spotify:track:40SBS57su9xLiE1WqkXOVr",
}
`;

exports[`Test Test 2`] = `
{
  "tracks": [
    {
      "album": {
        "album_type": "single",
        "artists": [
          {
            "external_urls": {
              "spotify": "https://open.spotify.com/artist/0HxX6imltnNXJyQhu4nsiO",
            },
            "href": "https://api.spotify.com/v1/artists/0HxX6imltnNXJyQhu4nsiO",
            "id": "0HxX6imltnNXJyQhu4nsiO",
            "name": "LF SYSTEM",
            "type": "artist",
            "uri": "spotify:artist:0HxX6imltnNXJyQhu4nsiO",
          },
        ],
        "available_markets": [
          "AD",
          "AE",
          "AG",
          "AL",
          "AM",
          "AO",
          "AR",
          "AT",
          "AU",
          "AZ",
          "BA",
          "BB",
          "BD",
          "BE",
          "BF",
          "BG",
          "BH",
          "BI",
          "BJ",
          "BN",
          "BO",
          "BR",
          "BS",
          "BT",
          "BW",
          "BZ",
          "CA",
          "CD",
          "CG",
          "CH",
          "CI",
          "CL",
          "CM",
          "CO",
          "CR",
          "CV",
          "CW",
          "CY",
          "CZ",
          "DE",
          "DJ",
          "DK",
          "DM",
          "DO",
          "DZ",
          "EC",
          "EE",
          "EG",
          "ES",
          "FI",
          "FJ",
          "FM",
          "FR",
          "GA",
          "GB",
          "GD",
          "GE",
          "GH",
          "GM",
          "GN",
          "GQ",
          "GR",
          "GT",
          "GW",
          "GY",
          "HK",
          "HN",
          "HR",
          "HT",
          "HU",
          "ID",
          "IE",
          "IL",
          "IN",
          "IQ",
          "IS",
          "IT",
          "JM",
          "JO",
          "JP",
          "KE",
          "KG",
          "KH",
          "KI",
          "KM",
          "KN",
          "KR",
          "KW",
          "KZ",
          "LA",
          "LB",
          "LC",
          "LI",
          "LK",
          "LR",
          "LS",
          "LT",
          "LU",
          "LV",
          "LY",
          "MA",
          "MC",
          "MD",
          "ME",
          "MG",
          "MH",
          "MK",
          "ML",
          "MN",
          "MO",
          "MR",
          "MT",
          "MU",
          "MV",
          "MW",
          "MX",
          "MY",
          "MZ",
          "NA",
          "NE",
          "NG",
          "NI",
          "NL",
          "NO",
          "NP",
          "NR",
          "NZ",
          "OM",
          "PA",
          "PE",
          "PG",
          "PH",
          "PK",
          "PL",
          "PS",
          "PT",
          "PW",
          "PY",
          "QA",
          "RO",
          "RS",
          "RW",
          "SA",
          "SB",
          "SC",
          "SE",
          "SG",
          "SI",
          "SK",
          "SL",
          "SM",
          "SN",
          "SR",
          "ST",
          "SV",
          "SZ",
          "TD",
          "TG",
          "TH",
          "TJ",
          "TL",
          "TN",
          "TO",
          "TR",
          "TT",
          "TV",
          "TW",
          "TZ",
          "UA",
          "UG",
          "US",
          "UY",
          "UZ",
          "VC",
          "VE",
          "VN",
          "VU",
          "WS",
          "XK",
          "ZA",
          "ZM",
          "ZW",
        ],
        "external_urls": {
          "spotify": "https://open.spotify.com/album/528LrHfHcB7PMAvyp8Obhp",
        },
        "href": "https://api.spotify.com/v1/albums/528LrHfHcB7PMAvyp8Obhp",
        "id": "528LrHfHcB7PMAvyp8Obhp",
        "images": [
          {
            "height": 640,
            "url": "https://i.scdn.co/image/ab67616d0000b273ced808ef1567eaf901041438",
            "width": 640,
          },
          {
            "height": 300,
            "url": "https://i.scdn.co/image/ab67616d00001e02ced808ef1567eaf901041438",
            "width": 300,
          },
          {
            "height": 64,
            "url": "https://i.scdn.co/image/ab67616d00004851ced808ef1567eaf901041438",
            "width": 64,
          },
        ],
        "name": "Afraid To Feel",
        "release_date": "2022-05-02",
        "release_date_precision": "day",
        "total_tracks": 1,
        "type": "album",
        "uri": "spotify:album:528LrHfHcB7PMAvyp8Obhp",
      },
      "artists": [
        {
          "external_urls": {
            "spotify": "https://open.spotify.com/artist/0HxX6imltnNXJyQhu4nsiO",
          },
          "href": "https://api.spotify.com/v1/artists/0HxX6imltnNXJyQhu4nsiO",
          "id": "0HxX6imltnNXJyQhu4nsiO",
          "name": "LF SYSTEM",
          "type": "artist",
          "uri": "spotify:artist:0HxX6imltnNXJyQhu4nsiO",
        },
      ],
      "available_markets": [
        "AD",
        "AE",
        "AG",
        "AL",
        "AM",
        "AO",
        "AR",
        "AT",
        "AU",
        "AZ",
        "BA",
        "BB",
        "BD",
        "BE",
        "BF",
        "BG",
        "BH",
        "BI",
        "BJ",
        "BN",
        "BO",
        "BR",
        "BS",
        "BT",
        "BW",
        "BZ",
        "CA",
        "CD",
        "CG",
        "CH",
        "CI",
        "CL",
        "CM",
        "CO",
        "CR",
        "CV",
        "CW",
        "CY",
        "CZ",
        "DE",
        "DJ",
        "DK",
        "DM",
        "DO",
        "DZ",
        "EC",
        "EE",
        "EG",
        "ES",
        "FI",
        "FJ",
        "FM",
        "FR",
        "GA",
        "GB",
        "GD",
        "GE",
        "GH",
        "GM",
        "GN",
        "GQ",
        "GR",
        "GT",
        "GW",
        "GY",
        "HK",
        "HN",
        "HR",
        "HT",
        "HU",
        "ID",
        "IE",
        "IL",
        "IN",
        "IQ",
        "IS",
        "IT",
        "JM",
        "JO",
        "JP",
        "KE",
        "KG",
        "KH",
        "KI",
        "KM",
        "KN",
        "KR",
        "KW",
        "KZ",
        "LA",
        "LB",
        "LC",
        "LI",
        "LK",
        "LR",
        "LS",
        "LT",
        "LU",
        "LV",
        "LY",
        "MA",
        "MC",
        "MD",
        "ME",
        "MG",
        "MH",
        "MK",
        "ML",
        "MN",
        "MO",
        "MR",
        "MT",
        "MU",
        "MV",
        "MW",
        "MX",
        "MY",
        "MZ",
        "NA",
        "NE",
        "NG",
        "NI",
        "NL",
        "NO",
        "NP",
        "NR",
        "NZ",
        "OM",
        "PA",
        "PE",
        "PG",
        "PH",
        "PK",
        "PL",
        "PS",
        "PT",
        "PW",
        "PY",
        "QA",
        "RO",
        "RS",
        "RW",
        "SA",
        "SB",
        "SC",
        "SE",
        "SG",
        "SI",
        "SK",
        "SL",
        "SM",
        "SN",
        "SR",
        "ST",
        "SV",
        "SZ",
        "TD",
        "TG",
        "TH",
        "TJ",
        "TL",
        "TN",
        "TO",
        "TR",
        "TT",
        "TV",
        "TW",
        "TZ",
        "UA",
        "UG",
        "US",
        "UY",
        "UZ",
        "VC",
        "VE",
        "VN",
        "VU",
        "WS",
        "XK",
        "ZA",
        "ZM",
        "ZW",
      ],
      "disc_number": 1,
      "duration_ms": 177524,
      "explicit": false,
      "external_ids": {
        "isrc": "GBAHT2200492",
      },
      "external_urls": {
        "spotify": "https://open.spotify.com/track/40SBS57su9xLiE1WqkXOVr",
      },
      "href": "https://api.spotify.com/v1/tracks/40SBS57su9xLiE1WqkXOVr",
      "id": "40SBS57su9xLiE1WqkXOVr",
      "is_local": false,
      "name": "Afraid To Feel",
      "popularity": 85,
      "preview_url": "https://p.scdn.co/mp3-preview/127d8691ff65a9c521813cbfb973ac5302b7840f?cid=3041f34cf22c46349d0c80148946aee6",
      "track_number": 1,
      "type": "track",
      "uri": "spotify:track:40SBS57su9xLiE1WqkXOVr",
    },
    {
      "album": {
        "album_type": "single",
        "artists": [
          {
            "external_urls": {
              "spotify": "https://open.spotify.com/artist/4VrJDwgmhD1aIenZwn7JpE",
            },
            "href": "https://api.spotify.com/v1/artists/4VrJDwgmhD1aIenZwn7JpE",
            "id": "4VrJDwgmhD1aIenZwn7JpE",
            "name": "Max Leone",
            "type": "artist",
            "uri": "spotify:artist:4VrJDwgmhD1aIenZwn7JpE",
          },
          {
            "external_urls": {
              "spotify": "https://open.spotify.com/artist/5zFMLXUnqxwdgTpLCX9LDj",
            },
            "href": "https://api.spotify.com/v1/artists/5zFMLXUnqxwdgTpLCX9LDj",
            "id": "5zFMLXUnqxwdgTpLCX9LDj",
            "name": "Super Duper",
            "type": "artist",
            "uri": "spotify:artist:5zFMLXUnqxwdgTpLCX9LDj",
          },
        ],
        "available_markets": [
          "AD",
          "AE",
          "AG",
          "AL",
          "AM",
          "AO",
          "AR",
          "AT",
          "AU",
          "AZ",
          "BA",
          "BB",
          "BD",
          "BE",
          "BF",
          "BG",
          "BH",
          "BI",
          "BJ",
          "BN",
          "BO",
          "BR",
          "BS",
          "BT",
          "BW",
          "BY",
          "BZ",
          "CA",
          "CD",
          "CG",
          "CH",
          "CI",
          "CL",
          "CM",
          "CO",
          "CR",
          "CV",
          "CW",
          "CY",
          "CZ",
          "DE",
          "DJ",
          "DK",
          "DM",
          "DO",
          "DZ",
          "EC",
          "EE",
          "EG",
          "ES",
          "FI",
          "FJ",
          "FM",
          "FR",
          "GA",
          "GB",
          "GD",
          "GE",
          "GH",
          "GM",
          "GN",
          "GQ",
          "GR",
          "GT",
          "GW",
          "GY",
          "HK",
          "HN",
          "HR",
          "HT",
          "HU",
          "ID",
          "IE",
          "IL",
          "IN",
          "IQ",
          "IS",
          "IT",
          "JM",
          "JO",
          "JP",
          "KE",
          "KG",
          "KH",
          "KI",
          "KM",
          "KN",
          "KR",
          "KW",
          "KZ",
          "LA",
          "LB",
          "LC",
          "LI",
          "LK",
          "LR",
          "LS",
          "LT",
          "LU",
          "LV",
          "LY",
          "MA",
          "MC",
          "MD",
          "ME",
          "MG",
          "MH",
          "MK",
          "ML",
          "MN",
          "MO",
          "MR",
          "MT",
          "MU",
          "MV",
          "MW",
          "MX",
          "MY",
          "MZ",
          "NA",
          "NE",
          "NG",
          "NI",
          "NL",
          "NO",
          "NP",
          "NR",
          "NZ",
          "OM",
          "PA",
          "PE",
          "PG",
          "PH",
          "PK",
          "PL",
          "PS",
          "PT",
          "PW",
          "PY",
          "QA",
          "RO",
          "RS",
          "RW",
          "SA",
          "SB",
          "SC",
          "SE",
          "SG",
          "SI",
          "SK",
          "SL",
          "SM",
          "SN",
          "SR",
          "ST",
          "SV",
          "SZ",
          "TD",
          "TG",
          "TH",
          "TJ",
          "TL",
          "TN",
          "TO",
          "TR",
          "TT",
          "TV",
          "TW",
          "TZ",
          "UA",
          "UG",
          "US",
          "UY",
          "UZ",
          "VC",
          "VE",
          "VN",
          "VU",
          "WS",
          "XK",
          "ZA",
          "ZM",
          "ZW",
        ],
        "external_urls": {
          "spotify": "https://open.spotify.com/album/6mbGqOkX3kJstdFSfpOQW2",
        },
        "href": "https://api.spotify.com/v1/albums/6mbGqOkX3kJstdFSfpOQW2",
        "id": "6mbGqOkX3kJstdFSfpOQW2",
        "images": [
          {
            "height": 640,
            "url": "https://i.scdn.co/image/ab67616d0000b2733b1bcfb33946691c857ac8a8",
            "width": 640,
          },
          {
            "height": 300,
            "url": "https://i.scdn.co/image/ab67616d00001e023b1bcfb33946691c857ac8a8",
            "width": 300,
          },
          {
            "height": 64,
            "url": "https://i.scdn.co/image/ab67616d000048513b1bcfb33946691c857ac8a8",
            "width": 64,
          },
        ],
        "name": "First Grade (Super Duper Remix)",
        "release_date": "2020-08-20",
        "release_date_precision": "day",
        "total_tracks": 1,
        "type": "album",
        "uri": "spotify:album:6mbGqOkX3kJstdFSfpOQW2",
      },
      "artists": [
        {
          "external_urls": {
            "spotify": "https://open.spotify.com/artist/4VrJDwgmhD1aIenZwn7JpE",
          },
          "href": "https://api.spotify.com/v1/artists/4VrJDwgmhD1aIenZwn7JpE",
          "id": "4VrJDwgmhD1aIenZwn7JpE",
          "name": "Max Leone",
          "type": "artist",
          "uri": "spotify:artist:4VrJDwgmhD1aIenZwn7JpE",
        },
        {
          "external_urls": {
            "spotify": "https://open.spotify.com/artist/5zFMLXUnqxwdgTpLCX9LDj",
          },
          "href": "https://api.spotify.com/v1/artists/5zFMLXUnqxwdgTpLCX9LDj",
          "id": "5zFMLXUnqxwdgTpLCX9LDj",
          "name": "Super Duper",
          "type": "artist",
          "uri": "spotify:artist:5zFMLXUnqxwdgTpLCX9LDj",
        },
      ],
      "available_markets": [
        "AD",
        "AE",
        "AG",
        "AL",
        "AM",
        "AO",
        "AR",
        "AT",
        "AU",
        "AZ",
        "BA",
        "BB",
        "BD",
        "BE",
        "BF",
        "BG",
        "BH",
        "BI",
        "BJ",
        "BN",
        "BO",
        "BR",
        "BS",
        "BT",
        "BW",
        "BY",
        "BZ",
        "CA",
        "CD",
        "CG",
        "CH",
        "CI",
        "CL",
        "CM",
        "CO",
        "CR",
        "CV",
        "CW",
        "CY",
        "CZ",
        "DE",
        "DJ",
        "DK",
        "DM",
        "DO",
        "DZ",
        "EC",
        "EE",
        "EG",
        "ES",
        "FI",
        "FJ",
        "FM",
        "FR",
        "GA",
        "GB",
        "GD",
        "GE",
        "GH",
        "GM",
        "GN",
        "GQ",
        "GR",
        "GT",
        "GW",
        "GY",
        "HK",
        "HN",
        "HR",
        "HT",
        "HU",
        "ID",
        "IE",
        "IL",
        "IN",
        "IQ",
        "IS",
        "IT",
        "JM",
        "JO",
        "JP",
        "KE",
        "KG",
        "KH",
        "KI",
        "KM",
        "KN",
        "KR",
        "KW",
        "KZ",
        "LA",
        "LB",
        "LC",
        "LI",
        "LK",
        "LR",
        "LS",
        "LT",
        "LU",
        "LV",
        "LY",
        "MA",
        "MC",
        "MD",
        "ME",
        "MG",
        "MH",
        "MK",
        "ML",
        "MN",
        "MO",
        "MR",
        "MT",
        "MU",
        "MV",
        "MW",
        "MX",
        "MY",
        "MZ",
        "NA",
        "NE",
        "NG",
        "NI",
        "NL",
        "NO",
        "NP",
        "NR",
        "NZ",
        "OM",
        "PA",
        "PE",
        "PG",
        "PH",
        "PK",
        "PL",
        "PS",
        "PT",
        "PW",
        "PY",
        "QA",
        "RO",
        "RS",
        "RW",
        "SA",
        "SB",
        "SC",
        "SE",
        "SG",
        "SI",
        "SK",
        "SL",
        "SM",
        "SN",
        "SR",
        "ST",
        "SV",
        "SZ",
        "TD",
        "TG",
        "TH",
        "TJ",
        "TL",
        "TN",
        "TO",
        "TR",
        "TT",
        "TV",
        "TW",
        "TZ",
        "UA",
        "UG",
        "US",
        "UY",
        "UZ",
        "VC",
        "VE",
        "VN",
        "VU",
        "WS",
        "XK",
        "ZA",
        "ZM",
        "ZW",
      ],
      "disc_number": 1,
      "duration_ms": 165333,
      "explicit": false,
      "external_ids": {
        "isrc": "USUG12002986",
      },
      "external_urls": {
        "spotify": "https://open.spotify.com/track/2wNZlBkr1y9nBiuNB0IcRy",
      },
      "href": "https://api.spotify.com/v1/tracks/2wNZlBkr1y9nBiuNB0IcRy",
      "id": "2wNZlBkr1y9nBiuNB0IcRy",
      "is_local": false,
      "name": "First Grade - Super Duper Remix",
      "popularity": 49,
      "preview_url": "https://p.scdn.co/mp3-preview/035a68db6e20e1a8fb9d4b047e78350dc5b4b0d6?cid=3041f34cf22c46349d0c80148946aee6",
      "track_number": 1,
      "type": "track",
      "uri": "spotify:track:2wNZlBkr1y9nBiuNB0IcRy",
    },
  ],
}
`;
